custom/less/section-docs.less
/* ... */
// Sidebar gradient mask
.sidebar-affix-shadow {
  .clearfix;

  @media (max-width: (@screen-sm - 1px)) {
    display: none;
  }

  &:before,
  &:after {
    content: '';
    position: fixed;
    width: 100%;
    z-index: 100;
    // scrollbar width + border-right with
    margin-left: -6px;
    pointer-events: none;
    opacity: 0;
    transition: opacity .2s ease;
  }

  &:before {
    height: 30px;
    top: 0;
    background: linear-gradient(to bottom, #fff 0%, rgba(255, 255, 255, 0) 100%);
  }

  &:after {
    height: 40px;
    bottom: 0;
    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #fff 100%);
    opacity: 1;
  }

  &.on {

    &:before,
    &:after {
      opacity: 1;
    }
  }

  &.bottom {

    &:after {
      opacity: 0 !important;
    }
  }
}

#toc {
  width: 100%;
  padding: 10px 0 20px 0;

  .sidebar-meta {
    padding-top: 20px;

    a {
      display: inline;
      font-size: 12px;
      border: none !important;
      padding: 4px;
    }

    .back-to-top {
      opacity: 0;
      pointer-events: none;
      transition: opacity .2s ease;
    }
  }

  @media (max-width: (@screen-sm - 1px)) {
    position: static;
    padding: 0 0 20px;
    border-bottom: 1px solid #eee;

    li {

      a {
        padding-left: 0 !important;
        padding-right: 0 !important;
        border-right: none !important;
      }
    }
  }

  > li {

    > a {

      &:hover,
      &:focus {
        background: #fff;
      }
    }
  }

  > li.active ol li.active {

    > a {
      color: @link-color;
      border-right-color: transparent;
      transition: border .6s ease;

      .sidebar-affix-shadow.on & {
        border-right-color: @link-color;
      }
    }

    > a + ol {
      max-height: 2000px;
    }
  }
}

#toc > li > ol ol {
  height: auto;
  transition: max-height .8s ease;
  overflow: hidden;
  max-height: 0;
}
ul#toc,#toc li {
  list-style: none;
}
#toc li{
  padding: 0;
  line-height: 18px;
}
#toc li a{
  display: block;
  padding: 5px 0;
}
#toc > li >a{
  padding: 10px 0;
}
#toc li a,#toc li a.selected{

}
#toc ol{
  padding:0;
}
#toc a{
  color: #999;
  text-decoration: none;
  border-right: 1px solid transparent;
  transition: border .6s ease;

  .sidebar-affix-shadow.on & {
    border-right-color: #eee;
  }
}
#toc a:hover,
#toc a:focus{
  color: #000;
  border-right: 1px solid #999
}
#toc a.selected{
  color: #3090e4;
  border-right: 1px solid #3090e4;
}
.page{
  margin: 25px 50px 0 250px;
}
#toc  li.current ol a{
  background-color: #6d7280;
}

#toc  li.current ol a.selected,#toc  li.current ol a:hover{
  background-color: #9299ad;
  box-shadow: rgba(255,255,255,0.2) 0 1px 0 0 inset,rgba(255,255,255,0.2) 0 1px 0 0;
}


#toc > li >a{
  padding-left: 0;
  font-size: 16px
}



#toc > li >ol >li > a{
  font-size: 14px;
  padding-left: 10px;
  padding-right: 10px;
}
#toc > li >ol >li > ol a{
  font-size: 13px;
  padding-left: 15px;
  padding-right: 10px;
}

#toc > li >ul >li > ul > li > ol a {
  font-size: 12px;
  padding-left: 30px;
  padding-right: 10px;
}

#toc > li >ul{
  margin-left: 0;
}

.docs-meta {
  float: right;
  overflow: auto;
  padding-left: 15px;
  margin-top: 20px;
  color: @gray-lighter;

  @media (max-width: @screen-sm) {
    display: none;
  }

  .icon {
    color: #000;
    font-size: 24px;
    vertical-align: -5px;
  }

  a {
    color: @gray-light;
    text-decoration: none;

    &:hover,
    &:focus {
      color: #000;
    }
  }
}

// Main content
.doc-content {
  width: 100%;

  &.with-comment {
    padding-left: 16px;
  }

  @media (max-width: 640px) {
    margin-top: 20px;
  }

  // Used by Download page
  .popover {

    .popover-title {
      padding-top: 9px;
      margin-top: 0;
      color: @gray;
    }
  }
}

#toc ol ol ol ol ol{
  display: none;
}
#toc ol li {
  padding-left: 10px;
}

#toc > li > ol > li {
  padding-left: 0;
}

// Download section
.dl-cell {
  padding: 15px;
  margin-bottom: 20px;
  border: 1px solid @gray-lighter;
  border-radius: 4px;

  h2 {
    margin: 0 0 10px !important;
    padding: 0 !important;
    border: none !important;
  }

  hr {
    margin: 10px 0 15px;
    border-bottom-color: @gray-lighter;
  }

  .bspopover {
    color: fade(@link-color, 80%);
  }

  .dl-cell-btn {
    margin-right: 10px;
    float: left;

    @media (max-width: (@screen-sm - 1px)) {
      margin-right: 0;
      margin-bottom: 10px;
      float: none;
    }
  }

  .list-inline {
    margin: 0;
    padding: 3px 0;

    > li {
      padding: 0;
      padding-right: 4px;

      &.muted {
        color: @gray-lighter;
      }

      .btn {
        padding-left: 0;
      }

      .icon-github {
        font-size: 20px;
        line-height: 1;
        vertical-align: -4px;
      }
    }
  }

  .btn-lg {
    margin-top: 10px;

    span {
      color: @gray-light;
    }
  }

  .dl-deps-tips {
    border: 1px solid;
    border-radius: 3px;
    font-size: 11px;
    padding: 0px;
    width: 15px;
    height: 15px;
    display: inline-block;
    line-height: 15px;
    text-align: center;
  }

  .popover {
    width: 210px;
    color: @gray-dark;

    .popover-content {

      ul {
        padding-left: 18px;
        margin-bottom: 0;
      }
    }
  }

  .checkbox {
    margin-top: 4px;
    margin-bottom: 4px;
    padding-left: 20px;
  }

  .changelog-rss {

    .icon {
      font-size: 17px;
      vertical-align: -2px;
    }

    &:hover,
    &:focus {
      color: @brand-warning;
    }
  }
}

h1 {

  .changelog-rss {
    border: 1px solid;
    padding: 2px 4px;
    border-radius: @border-radius-base;
    font-size: 17px;
    vertical-align: 3px;

    .icon {
      font-size: 17px;
      vertical-align: -1px;
    }

    &:hover,
    &:focus {
      color: #fff;
      background: @brand-warning;
      border-color: @brand-warning;
    }
  }
}

.changelog-rss {
  text-decoration: none;

  &:hover,
  &:focus {
    text-decoration: none;
  }
}
/* ... */

